Jython NEWS

For more details of issue [ n ], please see https://hg.python.org/jython, or for tags [ GH-n ] see
https://github.com/jythontools/jython

Development tip
  Bugs fixed
    - [ 2774 ] test_ssl failures from weak certificate
    - [ 2768 ] Allow bytearray + and += to accept buffer protocol objects
    - [ 2742 ] JARs for bouncycastle out of date (upgrade to 1.16)
    - [ 2762 ] Upgrade Apache commons-compress to 1.18
    - [ GH-108 ] Updates to JNR/JFFI to improve ARM HF support
    - [ 2445 ] Eclipse's DelegatingFeatureMap has MRO conflict (and IBM's MQQueue)
    - [ GH-121 ] Allow struct unpack and unpack_from bytearray and buffer
    - [ 2635 ] AST.lineno ignored by compile
    - [ 2744 ] Support buffer type in marshal.dump(s)
    - [ 2077 ] marshal doesn't raise error when fed unmarshalable object
    - [ 2732 ] Regression in large module support for pip
    - [ GH-131 ] Support Unicode in zxJDBC exceptions.
    - [ 2654 ] Imported modules allow access to submodules
    - [ 2362 ] Import * doesn't work on JDK9 for java.*, jdk.* namespaces
    - [ 2630 ] Cannot import java.awt.* on Java 9
    - [ 2663 ] Remove dependency on javax.xml.bind.DatatypeConverter
    - [ 2726 ] os.uname() throws IllegalArgumentException on Windows (Chinese localisation)
    - [ 2719 ] Divergence of __str__ and __repr__ from CPython
    - [ 2714 ] Locale and java version failures in test_os_jy
    - [ GH-111 ] Proper processing of gzip trailer without resubmission
    - [ 2231 ] __doc__ of PyString objects is always "The most base type"
    - [ 2230 ] Jython evaluation blocks under heavy load with high multi-core systems
    - [ 2506 ] ensurepip is reporting an error
    - [ 1609 ] Partial parsing does not work with function decorators
    - [ 2494 ] Support for pydoc_data
    - [ 2492 ] NPE for PythonInterpreter after new PyInteger
    - [ 2707 ] jython.py shebang line invalid on Linux
    - [ 1748 ] subprocess and os.system don't show output